--- a/src/paginas/css/Bibliografia.module.css
+++ b/src/paginas/css/Bibliografia.module.css
@@ -14,12 +14,11 @@
     display: flex;
 }
 
-.buttonLogo,
-.buttonLogin {
+.buttonLogo {
     padding: 0.2rem;
     display: block;
     color: white;
-    width: 10rem;
+    width: 5rem;
     text-align: center;
 }
 
@@ -29,15 +28,7 @@ button {
 }
 
 .home {
-    font-size: 1.2rem;
-}
-
-.loginUsuario {
-    font-size: 1.5rem;
-}
-
-.home,
-.loginUsuario {
+    font-size: 1rem;
     color: #ffff;
     text-decoration: none;
     font-weight: bold;
@@ -45,13 +36,8 @@ button {
 }
 
 .Logo {
-    height: 5rem;
-    width: 5rem;
-}
-
-.login {
-    height: 4rem;
-    width: 4rem;
+    height: 3.5rem;
+    width: 3.5rem;
 }
 
 .todomenu {
@@ -65,13 +51,29 @@ button {
 .menu2,
 .menu3,
 .menu4 {
-    font-size: 1.7rem;
-    text-decoration: underline;
+    font-size: 1.5rem;
+    text-decoration: none;
     color: #ffff;
     font-weight: bold;
     text-align: center;
-    padding-inline: 7rem;
+    padding-inline: 3rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.menu1:hover {
+    text-decoration: underline;
+}
+
+.menu2:hover {
+    text-decoration: underline;
+}
+
+.menu3:hover {
+    text-decoration: underline;
+}
+
+.menu4:hover {
+    text-decoration: underline;
 }
 
 .main {
